Fix center alignment

--- a/lightbox/css/style.css
+++ b/lightbox/css/style.css
@@ -21,8 +21,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-top: -400px;
-  margin-left: -300px;
+  margin-top: -300px;
+  margin-left: -400px;
 }
 #lightbox .box {
   display: none;
@@ -42,6 +42,7 @@
   text-align: center;
   vertical-align: middle;
   line-height: 30px;
+  cursor: pointer;
 }
 #lightbox .thumb {
   position: absolute;
